@@ -13,7 +13,7 @@ print 'Test # %d' % ntest
 
 ##-----------------------------
 
-dsname, src = 'exp=cxif5315:run=169', psana.Source('DetInfo(CxiDs2.0:Cspad.0)')
+dsname, src = 'exp=cxif5315:run=169', 'CxiDs2.0:Cspad.0'
 if ntest==2 : dsname, src = 'exp=meca1113:run=376', psana.Source('DetInfo(MecTargetChamber.0:Cspad2x2.1)')
 
 print 'Example for\n  dataset: %s\n  source : %s' % (dsname, src)
